	signals in 'sy/synode.cpp' and 'sy/synode.h'.
2015-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::gpiChanged()' and 'SwLwryClient::gpoChanged()'
	signals in 'sy/sylwrp_client.cpp' and 'sy/sylwrp_client.h'.
	* Added an 'SyGpioBundle' class in 'sy/sygpiobundle.cpp' and
	'sy/sygpoiobundle.h'.
	* Added an 'SyGpo' class in 'sy/sygpo.cpp' and 'sy/sygpo.h'.
	* Added a test harness for 'SyLwrpClient in 'tests/synodetest.cpp'
	and 'tests/synodetest.h'.
2015-11-11 Fred Gleason <fredg@paravelsystems.com>
	* Extended the 'SyLwrpClient::setGpoSourceAddress()' methods to handle
	source stream addresses correctly.
2015-11-13 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyRouting::sourceString()' method in 'sy/syrouting.cpp'
	and 'sy/syrouting.h'.
2015-11-14 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused GPO source
	addresses to be incorrect when the node entry included the name field.
2015-11-15 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' that caused the
	'SyLwrpClient::setGpiCode()' method to fail intermittently.
2015-11-16 Fred Gleason <fredg@paravelsystems.com>
	* Added syslog calls in 'sy/sylwrp_client.cpp'.
2015-11-27 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/symcastsocket.cpp' that broke reception of
	multicast datagrams.
	* Added sygpiotest(1) in 'tests/'.
2015-11-30 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::close()' method in 'sy/sylwrp_client.cpp'
	and 'sy/sylwrp_client.h'.
2015-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Modified the 'SyMcastSocket::subscribe()' and
	'SyMcastSocket::unsubscribe()' methods to use the IP_PROTO
	level when calling setsockopt() instead of IP_SOL under Linux.
2015-12-02 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyLwrpClient::connectionError()'
	signal in 'src/sy/sylwpr_client.cpp' and 'src/sy/sylwpr_client.h'.