@@ -11,6 +11,9 @@
 
 #define SWITCHYARD_LWRP_VERSION "1.1"
 #define SWITCHYARD_LWRP_CONNECTION_TIMEOUT 5000
+#define SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MIN 1000.0
+#define SWITCHYARD_LWRP_WATCHDOG_INTERVAL_MAX 5000.0
+#define SWITCHYARD_LWRP_WATCHDOG_RETRY 5000
 #define SWITCHYARD_ADVERTS_ADDRESS "239.192.255.3"
 #define SWITCHYARD_ADVERTS_PORT 4001
 #define SWITCHYARD_CLOCK_ADDRESS "239.192.255.2"
