@@ -42,8 +42,8 @@ MainObject::MainObject(QObject *parent)
   }
 
   node_node=new SyLwrpClient(0,this);
-  connect(node_node,SIGNAL(connected(unsigned)),
-	  this,SLOT(connectedData(unsigned)));
+  connect(node_node,SIGNAL(connected(unsigned,bool)),
+	  this,SLOT(connectedData(unsigned,bool)));
   connect(node_node,
 	  SIGNAL(sourceChanged(unsigned,int,const SyNode &,const SySource &)),
 	  this,
@@ -63,84 +63,97 @@ MainObject::MainObject(QObject *parent)
 	  this,SLOT(gpoChangedData(unsigned,int,const SyNode &,const SyGpo &)));
   connect(node_node,SIGNAL(nicAddressChanged(unsigned,const QHostAddress &)),
 	  this,SLOT(nicAddressChangedData(unsigned,const QHostAddress &)));
+  connect(node_node,
+	  SIGNAL(connectionError(unsigned,QAbstractSocket::SocketError)),
+	  this,
+	  SLOT(connectionErrorData(unsigned,QAbstractSocket::SocketError)));
 
-  node_node->connectToHost(QHostAddress(node),93,"");
+  node_node->connectToHost(QHostAddress(node),93,"",true);
 }
 
 
-void MainObject::connectedData(unsigned id)
+void MainObject::connectedData(unsigned id,bool state)
 {
-  printf("CONNECTED to %s:%u\n",
-	 (const char *)node_node->hostAddress().toString().toUtf8(),
-	 0xFFFF&node_node->port());
-  printf("\n");
-  printf("Hostname: %s\n",(const char *)node_node->hostName().toUtf8());
-  printf("NIC Address: %s\n",
-	 (const char *)node_node->nicAddress().toString().toUtf8());
-  printf("Source Slots: %u\n",node_node->srcSlots());
-  printf("Destination Slots: %u\n",node_node->dstSlots());
-  printf("GPI Slots: %u\n",node_node->gpis());
-  printf("GPO Slots: %u\n",node_node->gpos());
-  printf("\n");
-  printf("--- SOURCES ---\n");
-  for(unsigned i=0;i<node_node->srcSlots();i++) {
-    printf("Slot %3u:\n",i+1);
-    printf("  Stream Address: %s\n",
-	   (const char *)node_node->srcAddress(i).toString().toUtf8());
-    printf("  Source Number: %d\n",node_node->srcNumber(i));
-    printf("  Name: %s\n",(const char *)node_node->srcName(i).toUtf8());
-    printf("  Channels: %u\n",node_node->srcChannels(i));
-    printf("  Packet Size: %u\n",node_node->srcPacketSize(i));
-    if(node_node->srcEnabled(i)) {
-      printf("  Enabled: Yes\n");
-    }
-    else {
-      printf("  Enabled: No\n");
-    }
-    if(node_node->srcShareable(i)) {
-      printf("  Shareable: Yes\n");
-    }
-    else {
-      printf("  Shareable: No\n");
-    }
+  fprintf(stderr,"SIGNAL: connected(%d,%u)\n",id,state);
+  if(state) {
+    printf("CONNECTED to %s:%u\n",
+	   (const char *)node_node->hostAddress().toString().toUtf8(),
+	   0xFFFF&node_node->port());
     printf("\n");
+    printf("Hostname: %s\n",(const char *)node_node->hostName().toUtf8());
+    printf("NIC Address: %s\n",
+	   (const char *)node_node->nicAddress().toString().toUtf8());
+    printf("Source Slots: %u\n",node_node->srcSlots());
+    printf("Destination Slots: %u\n",node_node->dstSlots());
+    printf("GPI Slots: %u\n",node_node->gpis());
+    printf("GPO Slots: %u\n",node_node->gpos());
+    printf("\n");
+    printf("--- SOURCES ---\n");
+    for(unsigned i=0;i<node_node->srcSlots();i++) {
+      printf("Slot %3u:\n",i+1);
+      printf("  Stream Address: %s\n",
+	     (const char *)node_node->srcAddress(i).toString().toUtf8());
+      printf("  Source Number: %d\n",node_node->srcNumber(i));
+      printf("  Name: %s\n",(const char *)node_node->srcName(i).toUtf8());
+      printf("  Channels: %u\n",node_node->srcChannels(i));
+      printf("  Packet Size: %u\n",node_node->srcPacketSize(i));
+      if(node_node->srcEnabled(i)) {
+	printf("  Enabled: Yes\n");
+      }
+      else {
+	printf("  Enabled: No\n");
+      }
+      if(node_node->srcShareable(i)) {
+	printf("  Shareable: Yes\n");
+      }
+      else {
+	printf("  Shareable: No\n");
+      }
+      printf("\n");
+    }
+
+    printf("--- DESTINATIONS ---\n");
+    for(unsigned i=0;i<node_node->dstSlots();i++) {
+      printf("Slot %3u:\n",i+1);
+      printf("  Stream Address: %s\n",
+	     (const char *)node_node->dstAddress(i).toString().toUtf8());
+      printf("  Name: %s\n",(const char *)node_node->dstName(i).toUtf8());
+      printf("  Channels: %u\n",node_node->dstChannels(i));
+      printf("\n");
+    }
+
+    printf("--- GPIs ---\n");
+    for(unsigned i=0;i<node_node->gpis();i++) {
+      printf("GPI %3u:\n",i+1);
+      printf("  Code: %s\n",
+	     (const char *)node_node->gpiBundle(i)->code().toUtf8());
+      printf("\n");
+    }  
+
+    printf("--- GPOs ---\n");
+    for(unsigned i=0;i<node_node->gpos();i++) {
+      printf("GPO %3u:\n",i+1);
+      printf("  Name: %s\n",(const char *)node_node->gpo(i)->name().toUtf8());
+      if(node_node->gpo(i)->sourceSlot()<0) {
+	printf("  Source Address: %s\n",
+	       (const char *)node_node->gpo(i)->sourceAddress().toString().toUtf8());
+      }
+      else {
+	printf("  Source Address: %s/%d\n",
+	       (const char *)node_node->gpo(i)->sourceAddress().toString().toUtf8(),
+	       node_node->gpo(i)->sourceSlot()+1);
+      }
+      printf("  Code: %s\n",
+	     (const char *)node_node->gpo(i)->bundle()->code().toUtf8());
+      printf("\n");
+    }  
   }
+}
 
-  printf("--- DESTINATIONS ---\n");
-  for(unsigned i=0;i<node_node->dstSlots();i++) {
-    printf("Slot %3u:\n",i+1);
-    printf("  Stream Address: %s\n",
-	   (const char *)node_node->dstAddress(i).toString().toUtf8());
-    printf("  Name: %s\n",(const char *)node_node->dstName(i).toUtf8());
-    printf("  Channels: %u\n",node_node->dstChannels(i));
-    printf("\n");
-  }
 
-  printf("--- GPIs ---\n");
-  for(unsigned i=0;i<node_node->gpis();i++) {
-    printf("GPI %3u:\n",i+1);
-    printf("  Code: %s\n",
-	   (const char *)node_node->gpiBundle(i)->code().toUtf8());
-    printf("\n");
-  }  
-
-  printf("--- GPOs ---\n");
-  for(unsigned i=0;i<node_node->gpos();i++) {
-    printf("GPO %3u:\n",i+1);
-    printf("  Name: %s\n",(const char *)node_node->gpo(i)->name().toUtf8());
-    if(node_node->gpo(i)->sourceSlot()<0) {
-      printf("  Source Address: %s\n",
-	(const char *)node_node->gpo(i)->sourceAddress().toString().toUtf8());
-    }
-    else {
-      printf("  Source Address: %s/%d\n",
-	(const char *)node_node->gpo(i)->sourceAddress().toString().toUtf8(),
-	node_node->gpo(i)->sourceSlot()+1);
-    }
-    printf("  Code: %s\n",
-	   (const char *)node_node->gpo(i)->bundle()->code().toUtf8());
-    printf("\n");
-  }  
+void MainObject::connectionErrorData(unsigned id,QAbstractSocket::SocketError err)
+{
+  fprintf(stderr,"SIGNAL: connectionError(%u,%u)\n",id,err);
 }
 
 
